# quant

./: .gitignore  README.md  pyproject.toml
deploy/: README.md
quant/: __init__.py  backtest.py  broker.py  cache.py  data.py  filters.py  fundamentals.py  notify.py  portfolio.py  positions.py  report.py  score.py  state.py  universe.py
quant/factors/: __init__.py  momentum.py  quality.py  value.py  volatility.py
quant/signals/: __init__.py  combo.py  oscillator.py  trend.py
scripts/: auto_monthly_rebalance.py  check_alpaca.py  daily_monitor.py  paper_rebalance.py  run_all_compare.py  run_momentum.py  run_multifactor.py  run_oos.py  run_signal_compare.py  run_walk_forward.py  screen_today.py
tests/: conftest.py  test_backtest.py  test_broker.py  test_combo.py  test_factors.py  test_filters.py  test_notify.py  test_portfolio.py  test_positions.py  test_report.py  test_signals.py  test_value_quality.py
